[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lhy-formatter-linter"
version = "0.0.1"
dependencies = [
  "cmake-format>=0.6.13", "clang-format>=13.0.1", "clang-tidy>=13.0.1.1", "yapf>=0.43.0", "flake8>=7.1.1", "flake8-import-order>=0.18.2"
]
authors = [{name = "Yuan SUN", email = "sunyuan860510@gmail.com"}]
maintainers = [{name = "Yuan SUN", email = "sunyuan860510@gmail.com"}]
description = "This package provides the formatter and linter for cmake, C++ and python, ideal for mixed C++ and python developer."
requires-python = ">=3.9"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT License"}
keywords = ["cmake-format", "lint", "clang-format", "clang-tidy", "flake8", "code format", "code lint", "yapf", "lhy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Software Development",
    "Intended Audience :: Developers"
]

[project.scripts]
lhy = "script:main"

[project.urls]
Homepage = "https://github.com/sygslhy/lhy-formatter-linter"
Repository  = "https://github.com/sygslhy/lhy-formatter-linter"
Issues = "https://github.com/sygslhy/lhy-formatter-linter/issues"
Releases = "https://github.com/sygslhy/lhy-formatter-linter/releases"